<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>regular_polygon_motion</name>
  <version>0.1.0</version>
  <description>
    ROS package for moving the robot along the edges of a regular polygon
  </description>
  <maintainer email="andrewac2015@gmail.com">Andrew W. Chen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
